--- a/example/index.html
+++ b/example/index.html
@@ -9,9 +9,9 @@
 
 	<!-- Load monitor script -->
 	<script type="text/javascript">
-		var perfmonUxMonitorBeaconUrl = 'http://localhost:8080/log';
+		var speedmonitorUxMonitorBeaconUrl = 'http://localhost:8080/log';
 	</script>
-	<script type="text/javascript" src="http://localhost:8080/perfmon.js" defer></script>
+	<script type="text/javascript" src="http://localhost:8080/speedmonitor.js" defer></script>
 
 </body>
 </html>
